setting home controller

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <html>
     <head>
             <title>
-                TO Do APP
+                TO Do App
             </title>
     </head>
     <body>
@@ -15,7 +15,7 @@
         <br>
         <br>
         <ul>
-            <% for(i of list) {%>
+            <% for(i of items) {%>
                 <li>
                     <p><%= i.title%></p>
                     <p><%= i.category%></p>
